add redis and token
